add memorymapping